# causallm

./: .env  .gitignore  CHANGELOG.md  CLAUDE.md  COMPLETE_USER_GUIDE.md  CONTRIBUTING.md  DOMAIN_PACKAGES.md  ENHANCED_FEATURES.md  GITHUB_SETUP.md  LICENSE  MANIFEST.in  MCP_USAGE.md  PERFORMANCE_GUIDE.md  README.md  RELEASE_NOTES.md  app.py  causal llm.docx  causallm-4.2.0-py3-none-any.whl  contourpy-1.3.3-cp313-cp313-macosx_11_0_arm64.whl  contribute.md  demo.py  dev-plan.md  fonttools-4.59.2-cp313-cp313-macosx_10_13_universal2.whl  jiter-0.10.0-cp313-cp313-macosx_11_0_arm64.whl  kiwisolver-1.4.9-cp313-cp313-macosx_11_0_arm64.whl  mypy.ini  narwhals-2.4.0-py3-none-any.whl  numba-0.61.2-cp313-cp313-macosx_11_0_arm64.whl  openai-1.107.0-py3-none-any.whl  pyproject.toml  pytest.ini  requirements.txt  run_app.sh  run_tests.py  run_tests.sh  setup.py  startup_check.py  test_json_fix.py  test_pip_install.py  tst.py  (+2 more)
.github/workflows/: python-publish.yml  test.yml
app/: causalllm_ui
causal_knowledge_base/: Comprehensive MCP Layer Implementation Completed.docx  JSON_ERROR_FIXED.md  NAVIGATION_FIXED.md  QUICK_START.md  README_STREAMLIT.md  TROUBLESHOOTING.md
causalllm/: __init__.py  assumption_checker.py  automatic_confounder_detection.py  causal_argument_validator.py  causal_explanation_generator.py  causal_foundation_models.py  causal_rag.py  core.py  counterfactual_engine.py  dag_parser.py  data_manager.py  do_operator.py  domain_causal_templates.py  external_integrations.py  interactive_causal_qa.py  intervention_optimizer.py  llm_agents.py  llm_causal_discovery.py  llm_client.py  llm_confounder_reasoning.py  llm_effect_size_interpreter.py  llm_multimodal_analysis.py  llm_prompting.py  llm_sensitivity_analysis_guide.py  llm_statistical_interpreter.py  logging.py  prompt_templates.py  scm_explainer.py  temporal_causal_modeling.py  utils.py  visual_causal_graphs.py
causalllm/mcp/: __init__.py  client.py  config.py  tools.py  transport.py
causallm/: __init__.py  _version.py  cli.py  enhanced_causal_llm.py  enhanced_causallm.py  performance_demo.py  web.py
causallm/config/: __init__.py  settings.py
causallm/core/: __init__.py  async_processing.py  caching.py  causal_discovery.py  causal_llm_core.py  counterfactual_engine.py  dag_parser.py  data_processing.py  do_operator.py  enhanced_causal_discovery.py  exceptions.py  factory.py  interfaces.py  lazy_evaluation.py  llm_client.py  optimized_algorithms.py  prompt_templates.py  statistical_inference.py  statistical_methods.py  validation.py
causallm/domains/: __init__.py
causallm/interfaces/: __init__.py  async_interface.py  base.py
causallm/mcp/: client.py  config.py  server.py
causallm/monitoring/: __init__.py  health.py  metrics.py  profiler.py
causallm/plugins/: slm_client.py  slm_support.py
causallm/testing/: __init__.py  benchmarks.py  mutation.py  property_based.py
causallm/utils/: __init__.py  logging.py
docs/: API_REFERENCE.md  CLI_USAGE.md  COMPLETE_USER_GUIDE.md  DOCUMENTATION_INDEX.md  DOMAIN_PACKAGES.md  Data_Manager.md  ENHANCEMENTS_SUMMARY.md  MARKETING_QUICK_REFERENCE.md  MCP_Integration.md  PERFORMANCE_GUIDE.md  Tier1_LLM_Enhancements.md  Tier2_Advanced_Features.md  USAGE_EXAMPLES.md  WEB_INTERFACE.md  architecture.md  monitoring.md  testing.md
examples/: MARKETING_ATTRIBUTION_GUIDE.md  README.md  ab_testing_enhanced_demo.py  comprehensive_marketing_attribution_demo.py  counterfactual_storytelling.ipynb  data_manager_example.py  domain_packages_demo.py  educational_outcomes_analysis.py  enhanced_causallm_demo.py  financial_risk_analysis.py  fixed_enhanced_demo.py  healthcare_analysis.py  healthcare_analysis_demo.py  healthcare_analysis_openai.py  marketing_attribution.py  marketing_attribution_demo.py  marketing_attribution_openai.py  marketing_attribution_quickstart.py  marketing_campaign_uplift.py  mcp_client_example.py  mcp_config.json  mcp_integration_demo.py  mcp_server_example.py  mcp_websocket_config.json  monitoring_and_testing_demo.py  quick_enhanced_demo.py  stop_loss_insurance_analysis.py  tier1_enhanced_analysis_example.py  tier2_advanced_causal_analysis.py  treatment_effect_simulation.ipynb
integrations/: langchain_agent.py  llamaindex_plugin.py  openai_adapter.py
logs/: core_structured.jsonl  counterfactual_log.jsonl  dag_parser_structured.jsonl  data_manager_structured.jsonl  do_operator_structured.jsonl  llm_client_factory_structured.jsonl  llm_client_grok_structured.jsonl  llm_client_mcp_structured.jsonl  llm_prompting_structured.jsonl  scm_explainer_structured.jsonl  utils_structured.jsonl
streamlit_app/: debug_test.py  main.py  main_fixed.py  simple_test.py
streamlit_app/logs/: data_manager_structured.jsonl  llm_client_factory_structured.jsonl
streamlit_app/page_modules/: __init__.py  analytics.py  causal_discovery.py  data_manager.py  (+9 more)
tests/: __init__.py  conftest.py  test_causal_discovery.py  test_core.py  test_core_functionality.py  test_counterfactual_engine.py  test_dag_parser.py  test_data_manager.py  test_do_operator.py  test_enhanced_functionality.py  test_integration.py  test_llm_client.py  test_mcp_integration.py  test_statistical_methods.py  test_tier1_enhancements.py  test_tier2_features.py  test_usecase.py
(+34 files in other folders)
